Fix menu tablet, chicklets overflow

--- a/css/2components/_chicklets.scss
+++ b/css/2components/_chicklets.scss
@@ -9,6 +9,20 @@ ul.category-chicklets {
 		}
 	}
 
+	@include break(mobile){
+		overflow-x: auto;
+		overflow-y: hidden;
+		-webkit-overflow-scrolling: touch;
+		-ms-overflow-style: -ms-autohiding-scrollbar;
+		white-space: nowrap;
+		width: 98%;
+		height: 25px;
+
+		&::-webkit-scrollbar {
+		    display: none;
+		}
+	}
+
 	li {
 		display: inline-block;
 		a {
